Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Made the documents use the 'metadata' cluster instead of the 'metadata'
  layout so that is easier to customize metadata page for a given portal type.
- Portal type's export specify cps_workspace_wf and cps_sections_wf.
Bug fixes:
~~~~~~~~~~
- Made the upgradeDocuments() method in the upgrade module more generic.
- Changed the portal type "PressRelease" into "Press Release" according to the
  development guide, to have naming consistency.
- Added back the translation for "attached file" that got erroneously removed.
- Translated the "label_language_pt_BR" msgid into the shorter translated
  accordingly "Brazilian" word.
- Made the FAQ document use the new Layout properties "layout_create_method",
  "layout_edit_method", "layout_view_method", and more generally
  "layout_*_method".
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-